objects/Sales_Team__c.object
<CustomObject>
    <description>Information about each Sales Team Member</description>
    <fields>
        <fullName>Activities_Within_Last_30_Days__c</fullName>
        <description>The number of activities created within the last 30 days.</description>
        <label>Activities Within Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Sales_Calls_Day_Curr_Yr__c</fullName>
        <formula>Sales_Calls_Curr_Yr__c / Curr_Year_Working_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Sales Calls/Day</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Support_Calls_Day_Curr_Yr__c</fullName>
        <formula>Support_Calls_Curr_Yr__c / Curr_Year_Working_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Support Calls/Day</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Year_Working_Days__c</fullName>
        <formula>IF(AND((5 - (CASE(MOD( DATE( YEAR( TODAY() ), 1, 1 ) - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( Today() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( Today() - DATE( YEAR( TODAY() ), 1, 1 ) ) + 1) &lt; 7)), 
((CASE(MOD( Today() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( DATE( YEAR( TODAY() ), 1, 1 ) - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))), 
(((FLOOR((( Today() - DATE( YEAR( TODAY() ), 1, 1 ) ) - (CASE(MOD( DATE( YEAR( TODAY() ), 1, 1 ) - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) + 
(CASE(MOD( DATE( YEAR( TODAY() ), 1, 1 ) - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD( Today() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Curr Year Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <formula>CASE(text(Month(today())), &quot;1&quot;, &quot;January&quot;, &quot;2&quot;, &quot;February&quot;, &quot;3&quot;, &quot;March&quot;, &quot;4&quot;, &quot;April&quot;, &quot;5&quot;, &quot;May&quot;, &quot;6&quot;, &quot;June&quot;, &quot;7&quot;, &quot;July&quot;, &quot;8&quot;, &quot;August&quot;, &quot;9&quot;, &quot;September&quot;, &quot;10&quot;,&quot;October&quot;, &quot;11&quot;, &quot;November&quot;, &quot;12&quot;, &quot;December&quot;, &quot;N/A&quot;)&amp;&quot; &quot;&amp; text(Year (Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Last_Updated__c</fullName>
        <description>Date Last Updated</description>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIRST_DAY_TWO_WEEKS_AGO__c</fullName>
        <formula>(TODAY()- 7) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day Two Weeks Ago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Current_Week__c</fullName>
        <formula>(TODAY()+7) - 
CASE( 
MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day of Current Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Last_Week__c</fullName>
        <formula>TODAY() - 
CASE( 
MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day of Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>text(Owner:User.Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Day_2_Weeks_Ago__c</fullName>
        <formula>(TODAY()- 7 ) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day 2 Weeks Ago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Last_Week__c</fullName>
        <formula>TODAY() - 
CASE( 
MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName  &amp;&quot; &quot;&amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <formula>Owner:User.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_Created__c</fullName>
        <formula>Oppty_Created_Type_Add_On__c +  Oppty_Created_Type_New_Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunities Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Created_Type_Add_On__c</fullName>
        <description>The number of opportunities created for the current year where the Type is &quot;Add-on Business&quot;.</description>
        <label>Oppty Created || Type &quot;Add On&quot;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Created_Type_New_Business__c</fullName>
        <description>The number of opportunities created for the current year where the &quot;Type&quot; is New Business</description>
        <label>Oppty Created || Type &quot;New Business&quot;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_18_Digit_Id__c</fullName>
        <formula>Owner:User.X18_Digit_User_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Month__c</fullName>
        <formula>Case(Text(Month(DATE(YEAR(TODAY()),MONTH(TODAY()) - 1,1))), &quot;1&quot;, &quot;January&quot;, &quot;2&quot;, &quot;February&quot;, &quot;3&quot;, &quot;March&quot;, &quot;4&quot;, &quot;April&quot;, &quot;5&quot;, &quot;May&quot;, &quot;6&quot;, &quot;June&quot;, &quot;7&quot;, &quot;July&quot;, &quot;8&quot;, &quot;August&quot;, &quot;9&quot;, &quot;September&quot;, &quot;10&quot;,&quot;October&quot;, &quot;11&quot;, &quot;November&quot;, &quot;12&quot;, &quot;December&quot;, &quot;N/A&quot;)&amp;&quot; &quot;&amp; text(Year (Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Calls_Curr_Yr__c</fullName>
        <description>The number of sales calls for the current year.</description>
        <label>Sales Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <formula>text(Owner:User.Sales_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Member_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Member 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>text(Owner:User.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Owner:User.Status_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Calls_Curr_Yr__c</fullName>
        <description>The number of support calls for the current year.</description>
        <label>Support Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won_Oppty_Type_Add_On__c</fullName>
        <description>Won Opportunities with the Type of  &quot;Add On&quot; that were created during the current year.</description>
        <label>Won Oppty || Type &quot;Add On&quot;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won_Oppty_Type_New__c</fullName>
        <description>The number of opportunities created during the current year in the stage of &quot;Closed Won&quot; with the Type of &quot;New&quot;</description>
        <label>Won Oppty || Type &quot;New&quot;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CBD_New_York_Dairy</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>New York Dairy</value>
        </filters>
        <label>CBD || New York Dairy</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CBD_Pacific_Northwest_Dairy</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Pacific Northwest Dairy</value>
        </filters>
        <label>CBD || Pacific Northwest Dairy</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CBD_Southwest_Dairy_CBD</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Southwest Dairy CBD</value>
        </filters>
        <label>CBD || Southwest Dairy CBD</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CBD_Swine_Poultry_CBD</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Swine-Poultry CBD</value>
        </filters>
        <label>CBD || Swine-Poultry CBD</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dealer_Business_Dev</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Dealer Business Dev</value>
        </filters>
        <label>Dealer Business Dev</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Sales_Team_Members</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive Sales Team Members</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inside_Sales</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Inside Sales</value>
        </filters>
        <label>Inside Sales</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MRE_Animal_Milk_Products</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Animal Milk Products</value>
        </filters>
        <label>MRE || Animal Milk Products</label>
        <sharedTo>
            <group>MRE_Animal_Milk_Manager</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MRR_Milk_Products</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Milk Products</value>
        </filters>
        <label>MRE || Milk Products</label>
        <sharedTo>
            <group>MRE_Animal_Milk_Manager</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Team</label>
    </listViews>
    <listViews>
        <fullName>National_Retail_Exotics</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>National Retail Exotics</value>
        </filters>
        <label>National Retail Exotics</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Northeast_Great_Lakes_Dairy</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Great Lakes Dairy</value>
        </filters>
        <label>Northeast || Great Lakes Dairy</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Northeast_Great_Lakes_Lifestyle</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Great Lakes Lifestyle</value>
        </filters>
        <label>Northeast || Great Lakes Lifestyle</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Northeast_Great_Lakes_Swine_Spring</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Division__c</field>
            <operation>equals</operation>
            <value>Great Lakes Swine</value>
        </filters>
        <label>Northeast || Great Lakes Swine || Spring</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team</pluralLabel>
    <recordTypes>
        <fullName>Animal_Milk</fullName>
        <active>true</active>
        <description>Animal Milk Manager</description>
        <label>Animal Milk || Mgr</label>
    </recordTypes>
    <recordTypes>
        <fullName>Animal_Milk_Sales</fullName>
        <active>true</active>
        <description>Animal Milk Sales</description>
        <label>Animal Milk || Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milk_Products_Mgr</fullName>
        <active>true</active>
        <description>Products Manager</description>
        <label>Milk Products || Mgr</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milk_Products_User</fullName>
        <active>true</active>
        <description>Milk Products User</description>
        <label>Milk Products || User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purina_ASM</fullName>
        <active>true</active>
        <description>Purina Area Sales Manager</description>
        <label>Purina || ASM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purina_LPS</fullName>
        <active>true</active>
        <description>Purina LPS</description>
        <label>Purina || LPS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purina_Sales_Specialist</fullName>
        <active>true</active>
        <description>Purina Sales Specialist</description>
        <label>Purina || Sales Specialist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Services</fullName>
        <active>true</active>
        <description>Technical Services (Dari Brown)</description>
        <label>Technical Services</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>